chore(condo): DOMA-5554 Locale settings was moved to user profile

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -799,10 +799,8 @@
   "pages.condo.settings.propertyScope.form.alert.descriptionLink": "Перейти к списку сотрудников",
   "pages.condo.settings.propertyScope.alert.delete.Title": "Удалить область видимости?",
   "pages.condo.settings.propertyScope.alert.delete.Message": "Восстановить будет невозможно. Но можно будет создать снова.",
-  "pages.condo.settings.common.title": "Общие",
-  "pages.condo.settings.common.settingName": "Настройка",
-  "pages.condo.settings.common.settingValue": "Значение",
-  "pages.condo.settings.common.interfaceLanguage": "Язык интерфейса",
+  "pages.condo.profile.interfaceLanguage": "Язык интерфейса",
+  "pages.condo.profile.chooseInterfaceLanguage": "Выберите язык интерфейса",
   "pages.index.PageTitle": "Аналитика",
   "pages.organizations.CreateOrganizationMessage": "Давайте создадим вашу управляющую компанию",
   "pages.condo.analytics.index.PageTitle": "Аналитика для руководителей",
