feat(condo): DOMA-5575 Added SPP side-menu

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -182,6 +182,7 @@
   "global.section.settings": "Settings",
   "global.section.meters": "Meters log",
   "global.section.miniapps": "Services",
+  "global.section.SPP": "Payments from individuals",
   "global.available": "Available",
   "global.notAvailable": "Not available",
   "global.select.deletedEmployee": "Deleted employee",
