feat(condo): DOMA-5139 bank transaction import & report UI
* feat(condo): DOMA-5139 bank account import

* chore(condo): DOMA-5139 rebase & update migration number

* fix(condo): DOMA-5139 hide fileimport button on integration context mismatch

* chore(condo): DOMA-5139 rebase with origin

* refactor(condo): DOMA-5139 get property balance from meta only

* chore(callcenter): DOMA-5139 update callcenter submodule to main branch

* chore(condo): DOMA-5139 update types & gqlschema

* fix(condo): DOMA-5139 show both import buttons in case of null bankAccount

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -185,6 +185,17 @@
   "global.section.SPP": "Payments from individuals",
   "global.available": "Available",
   "global.notAvailable": "Not available",
+  "global.contractor": "{isSingular, plural, other {Contractors} one {Contractor}}",
+  "global.tin": "TIN",
+  "global.bankAccount": "Bank account",
+  "global.category": "Category",
+  "global.withdrawal": "{isSingular, plural, other {Withdrawals} one {Withdrawal}}",
+  "global.income": "{isSingular, plural, other {Incomes} one {Income}}",
+  "global.transaction": "{isSingular, plural, other {Transactions} one {Transaction}}",
+  "global.number": "Number",
+  "global.receiver": "Receiver",
+  "global.paymentPurpose": "Payment purpose",
+  "global.sum": "Sum",
   "global.select.deletedEmployee": "Deleted employee",
   "global.select.deletedOption": "Deleted",
   "global.filters.dateRange.start": "Start date",
@@ -515,6 +526,20 @@
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Property with this address has already been added to the organization",
   "pages.condo.property.warning.modal.Title": "Do not save property?",
   "pages.condo.property.id.DownloadExcelLabel": "Download file",
+  "pages.condo.property.report.pageImportTitle": "Property report",
+  "pages.condo.property.report.pageReportTitle": "Report in mobile",
+  "pages.condo.property.report.pageReportDescription": "(account number {bankAccountNumber})",
+  "pages.condo.property.report.dataUpdatedTitle": "Data was updated at {updatedAt}",
+  "pages.condo.property.report.importBankTransaction.title": "How to setup a report",
+  "pages.condo.property.report.importBankTransaction.description": "There are two ways to do this. First is upload file from «1С». Second is authorize with SBBOL and setup automatic integration.",
+  "pages.condo.property.report.importBankTransaction.importSbbolTitle": "Get transactions from SBBOL",
+  "pages.condo.property.report.importBankTransaction.importFileTitle": "Choose 1C file",
+  "pages.condo.property.report.importBankTransaction.processing.title": "Processing files",
+  "pages.condo.property.report.importBankTransaction.processing.description": "Report will appear as soon as the files are uploaded",
+  "pages.condo.property.report.visibility.visible": "Residents can see the report",
+  "pages.condo.property.report.visibility.hidden": "Residents don't see the report",
+  "pages.condo.property.report.visibility.visible.description": "Now residents of this property can see the report in Doma app",
+  "pages.condo.property.report.visibility.hidden.description": "Residents of this property can't see the report in Doma app anymore",
   "pages.condo.property.ImportTitle": "properties",
   "pages.condo.property.id.propertyInformationTitle": "About property",
   "pages.condo.property.id.propertyReportTitle": "Property report",
@@ -522,6 +547,9 @@
   "pages.condo.property.id.propertyReportComingSoonTitle": "«Property report» coming soon",
   "pages.condo.property.id.propertyReportComingSoonSubTitle": "Details coming soon.",
   "pages.condo.property.id.propertyReportAccessDenied": "This feature allowed for «Administrator» role only",
+  "pages.condo.property.id.propertyReportBalance.title": "Баланс дома",
+  "pages.condo.property.id.propertyReportBalance.description": "Updated at {dateUpdated}",
+  "pages.condo.property.id.propertyReportBalance.buttonTitle": "Open report",
   "pages.condo.property.id.becomeSberClientTitle": "Become Sber client",
   "pages.condo.property.id.setupReportTitle": "Setup report",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Enter value",
@@ -872,6 +900,36 @@
   "pages.users.status.Rejected": "User has rejected the invitation.",
   "pages.users.status.WaitAcceptOrReject": "User registered, waiting for an accept/reject action",
   "pages.users.UserIsAlreadyInList": "The user is already in user list",
+  "pages.banking.removeModal.contractor.title": "Удалить {count, plural, one {контрагента} other {контрагентов}} и {count, plural, one {его} other {их}} транзакции?",
+  "pages.banking.removeModal.contractor.description": "Все транзакции {count, plural, one {этого контрагента} other {этих контрагентов}} также будут удалены",
+  "pages.banking.removeModal.transaction.title": "Удалить {count, plural, one {транзакцию} other {транзакции}}?",
+  "pages.banking.removeModal.transaction.description": "Восстановить {count, plural, one {ее} other {данные}} будет невозможно",
+  "pages.banking.uploadTransactionsFile": "Upload file with transactions",
+  "pages.banking.categoryNotSet": "Category not set",
+  "pages.banking.table.notSet": "Не определена",
+  "pages.banking.chooseCategory": "Choose category",
+  "pages.banking.categoryProgress.title": "Choose categories related to the {entity}",
+  "pages.banking.categoryProgress.title.transaction": "transactions",
+  "pages.banking.categoryProgress.title.contractor": "contractors",
+  "pages.banking.categoryProgress.description": "{percent}% haven't category",
+  "pages.banking.categoryProgress.tooltip.contractor": "Contractor transactions without category will display in «Other» category",
+  "pages.banking.categoryProgress.tooltip.transaction": "Transactions without category will display in «Other» category",
+  "pages.banking.categoryModal.contractorsSelected": "Contractors selected",
+  "pages.banking.categoryModal.transactionsSelected": "Transactions selected",
+  "pages.banking.categoryModal.transactionsWarning.title": "Transaction categories will be updated automatically",
+  "pages.banking.categoryModal.transactionsWarning.description": "All of the contractor transactions ({count} pcs.) will be updated with selected category",
+  "pages.banking.report.itemsSelected": "Items selected: {count}",
+  "pages.banking.report.accountSetupTitle": "Setup SBBOL sync",
+  "pages.banking.report.accountNotFound": "Bank accounts not found",
+  "pages.banking.report.alertInfo.title": "Some SBBOL accounts may not be displayed",
+  "pages.banking.report.alertInfo.description": "In order for all current accounts that you have in SBBOL to be linked to properties in CRM, you need to check the box in SBBOL «Open for partners».",
+  "pages.banking.report.chooseBankAccountPlaceholder": "Choose bank account",
+  "pages.banking.report.choosePropertyPlaceholder": "Choose property",
+  "pages.banking.report.importHelpText": "{isSingular, plural, other {Choose address and account, created for selected property. Reports can be created for all properties at once.} one {Confirm, that bank account relates to this property}}",
+  "pages.banking.report.addAnotherBankAccount": "Add another one property and bank account",
+  "pages.banking.report.validation.notUnique": "Property can be connected to a single bank account. Please change property",
+  "pages.banking.report.syncSuccess.title": "Property reports created",
+  "pages.banking.report.syncSuccess.description": "Total amount: {count}",
   "EmployeeRoles": "Employee roles",
   "EmployeeRoles.availableTickets": "Which tickets the employee sees",
   "EmployeeRoles.availableTickets.allTickets": "all tickets",
@@ -1159,6 +1217,10 @@
   "tasks.TicketExportTask.progress.description.preparing": "Preparing for export",
   "tasks.TicketExportTask.progress.description.processing": "Tickets exported: {exported} from {total}",
   "tasks.TicketExportTask.progress.description.completed": "File has been created and downloaded was started",
+  "tasks.BankSyncTask.progress.title": "Importing transactions from file",
+  "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
+  "tasks.BankSyncTask.progress.description.processing": "Importing: {imported} из {total}",
+  "tasks.BankSyncTask.progress.description.completed": "Import complete",
   "OK": "OK",
   "Title": "Title",
   "profile": "Profile",
