--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -184,7 +184,18 @@
   "global.section.miniapps": "Сервисы",
   "global.section.SPP": "Платежи от физлиц",
   "global.available": "Есть",
-  "global.notAvailable": "Отсутствует",
+  "global.notAvailable": "Отсутсвует",
+  "global.contractor": "{isSingular, plural, other {Контрагенты} one {Контрагент}}",
+  "global.tin": "ИНН",
+  "global.bankAccount": "Расчетный счет",
+  "global.category": "Категория",
+  "global.withdrawal": "{isSingular, plural, other {Расходы} one {Расход}}",
+  "global.income": "{isSingular, plural, other {Поступления} one {Поступление}}",
+  "global.transaction": "{isSingular, plural, other {Транзакции} one {Транзакция}}",
+  "global.number": "Номер",
+  "global.receiver": "Получатель",
+  "global.paymentPurpose": "Назначение платежа",
+  "global.sum": "Сумма",
   "global.select.deletedEmployee": "Удаленный сотрудник",
   "global.select.deletedOption": "Удалено",
   "global.filters.dateRange.start": "Начальная дата",
@@ -515,6 +526,20 @@
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Дом с таким адресом уже был добавлен в организацию",
   "pages.condo.property.warning.modal.Title": "Не сохранять дом?",
   "pages.condo.property.id.DownloadExcelLabel": "Скачать файл",
+  "pages.condo.property.report.pageImportTitle": "Отчет по дому",
+  "pages.condo.property.report.pageReportTitle": "Отчет в телефоне",
+  "pages.condo.property.report.pageReportDescription": "(Р/сч {bankAccountNumber})",
+  "pages.condo.property.report.dataUpdatedTitle": "Данные обновлены {updatedAt}",
+  "pages.condo.property.report.importBankTransaction.title": "Как настроить отчет",
+  "pages.condo.property.report.importBankTransaction.description": "Есть два способа сделать это. Первый — загрузить файл из «1С». Второй — авторизоваться через Сбербанк Бизнес Онлайн (СББОЛ) и настроить автоматическую интеграцию.",
+  "pages.condo.property.report.importBankTransaction.importSbbolTitle": "Получить транзакции из СББОЛ",
+  "pages.condo.property.report.importBankTransaction.importFileTitle": "Выбрать файл 1С",
+  "pages.condo.property.report.importBankTransaction.processing.title": "Обрабатываем файлы",
+  "pages.condo.property.report.importBankTransaction.processing.description": "Отчет появится, как только система загрузит файлы",
+  "pages.condo.property.report.visibility.visible": "Жители видят отчет",
+  "pages.condo.property.report.visibility.hidden": "Жители не видят отчет",
+  "pages.condo.property.report.visibility.visible.description": "Теперь жители этого дома видят отчет в приложении Doma",
+  "pages.condo.property.report.visibility.hidden.description": "Жители этого дома больше не видят отчет в приложении Doma",
   "pages.condo.property.ImportTitle": "домов",
   "pages.condo.property.id.propertyInformationTitle": "О доме",
   "pages.condo.property.id.propertyReportTitle": "Отчет по дому",
@@ -522,6 +547,9 @@
   "pages.condo.property.id.propertyReportComingSoonTitle": "Скоро здесь появится «Отчет по дому»",
   "pages.condo.property.id.propertyReportComingSoonSubTitle": "Подробности — скоро.",
   "pages.condo.property.id.propertyReportAccessDenied": "Функция доступна только для роли «Администратор»",
+  "pages.condo.property.id.propertyReportBalance.title": "Баланс дома",
+  "pages.condo.property.id.propertyReportBalance.description": "Обновлено {dateUpdated}",
+  "pages.condo.property.id.propertyReportBalance.buttonTitle": "Открыть отчет",
   "pages.condo.property.id.becomeSberClientTitle": "Стать клиентом Сбера",
   "pages.condo.property.id.setupReportTitle": "Настроить отчет",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
@@ -872,6 +900,36 @@
   "pages.users.status.Rejected": "Пользователь отклонил приглашение.",
   "pages.users.status.WaitAcceptOrReject": "Зарегистрировался, пока не принял приглашение",
   "pages.users.UserIsAlreadyInList": "Пользователь уже добавлен в список",
+  "pages.banking.removeModal.contractor.title": "Удалить {count, plural, one {контрагента} other {контрагентов}} и {count, plural, one {его} other {их}} транзакции?",
+  "pages.banking.removeModal.contractor.description": "Все транзакции {count, plural, one {этого контрагента} other {этих контрагентов}} также будут удалены",
+  "pages.banking.removeModal.transaction.title": "Удалить {count, plural, one {транзакцию} other {транзакции}}?",
+  "pages.banking.removeModal.transaction.description": "Восстановить {count, plural, one {ее} other {данные}} будет невозможно",
+  "pages.banking.uploadTransactionsFile": "Загрузить файл с транзакциями",
+  "pages.banking.categoryNotSet": "Категория не определена",
+  "pages.banking.table.notSet": "Не определена",
+  "pages.banking.chooseCategory": "Выберите категорию",
+  "pages.banking.categoryProgress.title": "Выберите соответсвующие {entity} категории",
+  "pages.banking.categoryProgress.title.transaction": "транзакциям",
+  "pages.banking.categoryProgress.title.contractor": "контрагентам",
+  "pages.banking.categoryProgress.description": "{percent}% без категории",
+  "pages.banking.categoryProgress.tooltip.contractor": "Транзакции контрагентов без указания категории отображаются в категории «Прочие»",
+  "pages.banking.categoryProgress.tooltip.transaction": "Транзакции без указания категории отображаются в категории «Прочие»",
+  "pages.banking.categoryModal.contractorsSelected": "Выбрано контрагентов",
+  "pages.banking.categoryModal.transactionsSelected": "Выбрано транзакций",
+  "pages.banking.categoryModal.transactionsWarning.title": "Категории транзакций изменятся автоматически",
+  "pages.banking.categoryModal.transactionsWarning.description": "Всем транзакциям этого контрагента ({count} шт.) присвоится выбранная категория",
+  "pages.banking.report.itemsSelected": "Выбрано элементов: {count}",
+  "pages.banking.report.accountSetupTitle": "Настройте синхронизацию с СББОЛом",
+  "pages.banking.report.accountNotFound": "Расчетные счета не найдены",
+  "pages.banking.report.alertInfo.title": "Некоторые счета СББОЛа могут не отображаться",
+  "pages.banking.report.alertInfo.description": "Чтобы все расчетные счета, которые у вас есть в СББОЛе можно было привязать к домам в CRM, вам нужно поставить галочку в СББОЛе «Открыть для партнеров».",
+  "pages.banking.report.chooseBankAccountPlaceholder": "Выберите Рсч",
+  "pages.banking.report.choosePropertyPlaceholder": "Выберите дом",
+  "pages.banking.report.importHelpText": "{isSingular, plural, other {Выберите адрес и счет, открытый для указанного дома. Отчеты можно создать сразу для всех домов.} one {Подтвердите, что расчетный счет принадлежит этому дому}}",
+  "pages.banking.report.addAnotherBankAccount": "Добавить еще один дом и расчетный счет",
+  "pages.banking.report.validation.notUnique": "Дом может быть привязан только к одному Рсч. Поменяйте дом",
+  "pages.banking.report.syncSuccess.title": "Отчеты по домам созданы",
+  "pages.banking.report.syncSuccess.description": "Количество: {count}",
   "EmployeeRoles": "Роли сотрудников",
   "EmployeeRoles.availableTickets": "Какие заявки видит сотрудник",
   "EmployeeRoles.availableTickets.allTickets": "все заявки",
@@ -1159,6 +1217,10 @@
   "tasks.TicketExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.TicketExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.TicketExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
+  "tasks.BankSyncTask.progress.title": "Импорт транзакций из файла",
+  "tasks.BankSyncTask.progress.description.preparing": "Подготовка к импорту",
+  "tasks.BankSyncTask.progress.description.processing": "Импортированно записей: {imported} из {total}",
+  "tasks.BankSyncTask.progress.description.completed": "Файл импортирован",
   "OK": "Хорошо",
   "Title": "Заголовок",
   "profile": "Профиль",
