feat(condo): DOMA-5400 added sendResidentMessageService & tests & rebased feat(condo): DOMA-5400 totaly refactored & fixed tests & rebased feat(condo): DOMA-5400 self review fixes, refactoring, tests added feat(condo): DOMA-5400 packages/keystone/test.utils.js updated feat(condo): DOMA-5400 rebased to master feat(condo): DOMA-5400 added user.locale support, taskId in logs for sendResidentMessage task, updated types, linted feat(condo): DOMA-5400 fixes after review, refactoring feat(condo): DOMA-5400 deep refactoring feat(condo): DOMA-5400 self review fiexs

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1153,6 +1153,8 @@
   "notification.messages.BILLING_RECEIPT_AVAILABLE.push.title": "Check out your utility bill",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.email.subject": "Check out your utility bill",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.push.title": "Check out your utility bill",
+  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "Check out your utility bill",
+  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "Check out your utility bill",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.email.subject": "Add billing account number please",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.push.title": "Add billing account number please",
   "notification.messages.METER_VERIFICATION_DATE_REMINDER.email.subject": "Time to do meters verification!",
@@ -1558,6 +1560,12 @@
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Additional quality control parameters must match the specified scoring",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Please provide proper period not before start of previous and not later than start of current month, valid format is YYYY-MM-DD",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_CONTEXT_PROVIDED": "Please provide existing non-deleted billing integration organization context id",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_CATEGORY_PROVIDED": "Please provide existing non-deleted billing category id",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PROPERTY_PROVIDED": "All provided properties in scopes should be non-deleted & connected to organization of the billing context",
+  "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
   "excelExport.header.contacts.forAllTime": "Contacts for all time",
   "excelExport.header.contacts.forPeriod": "Contacts for the period",
   "excelExport.headers.payments.date": "Date",
@@ -1748,6 +1756,19 @@
   "billing.category.radio.name": "Radio",
   "billing.category.intercom.name": "Intercom",
   "billing.category.telecom.name": "Telecom",
+  "billing.category.housing.name.declined": "rent",
+  "billing.category.repair.name.declined": "repairs",
+  "billing.category.electricity.name.declined": "electricity",
+  "billing.category.heating_hot_water.name.declined": "heating and hot water",
+  "billing.category.cold_water.name.declined": "cold water",
+  "billing.category.gas.name.declined": "gas",
+  "billing.category.trash.name.declined": "garbage collection",
+  "billing.category.parking.name.declined": "parking",
+  "billing.category.storage.name.declined": "storage space",
+  "billing.category.internet.name.declined": "internet",
+  "billing.category.radio.name.declined": "radio",
+  "billing.category.intercom.name.declined": "intercom",
+  "billing.category.telecom.name.declined": "telecom",
   "banking.integration.SBBOL.name": "SBBOL",
   "banking.integration.1CClientBankExchange.name": "1C",
   "banking.category.MAINTENANCE_APARTMENT_BUILDING.name": "Maintenance and current repair of common property in an apartment building",
