--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1153,6 +1153,8 @@
   "notification.messages.BILLING_RECEIPT_AVAILABLE.push.title": "Вам квитанция!",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.email.subject": "Вам квитанция!",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.push.title": "Вам квитанция!",
+  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "Вам квитанция!",
+  "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "Вам квитанция!",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.email.subject": "Добавьте лицевой счёт",
   "notification.messages.RESIDENT_ADD_BILLING_ACCOUNT.push.title": "Добавьте лицевой счёт",
   "notification.messages.METER_VERIFICATION_DATE_REMINDER.email.subject": "Время сделать поверку счетчика!",
@@ -1558,6 +1560,12 @@
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "Дата актуальности меньше чем дата отправки",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Дополнительные параметры контроля качества должны соответсоввать указанной оценке",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "При указании комментария или дополнительных параметров оценки нужно указать саму оценку",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Необходимо передать период не ранее начала прошлого месяца и не позднее начала текущего месяца, валидный формат - YYYY-MM-DD",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_CONTEXT_PROVIDED": "Необходимо передать id существующей биллинговой интеграции для организации",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_CATEGORY_PROVIDED": "Необходимо передать id существующей биллинговой категории",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Необходимо передать хотя бы один элемент в scopes",
+  "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PROPERTY_PROVIDED": "Все переданные id домов в скоупах должны принадлежать организации из переданного биллингового контекста",
+  "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Необходимо передать хотя бы один элемент в scopes",
   "excelExport.header.contacts.forAllTime": "Контакты за всё время",
   "excelExport.header.contacts.forPeriod": "Контакты за период",
   "excelExport.headers.payments.date": "Дата",
@@ -1747,7 +1755,20 @@
   "billing.category.internet.name": "Интернет",
   "billing.category.radio.name": "Радио",
   "billing.category.intercom.name": "Домофон",
-  "billing.category.telecom.name": "Антена",
+  "billing.category.telecom.name": "Антенна",
+  "billing.category.housing.name.declined": "квартплату",
+  "billing.category.repair.name.declined": "капремонт",
+  "billing.category.electricity.name.declined": "электричество",
+  "billing.category.heating_hot_water.name.declined": "отопление и горячую воду",
+  "billing.category.cold_water.name.declined": "холодную воду",
+  "billing.category.gas.name.declined": "газ",
+  "billing.category.trash.name.declined": "ТКО",
+  "billing.category.parking.name.declined": "паркинг",
+  "billing.category.storage.name.declined": "кладовку",
+  "billing.category.internet.name.declined": "интернет",
+  "billing.category.radio.name.declined": "радио",
+  "billing.category.intercom.name.declined": "домофон",
+  "billing.category.telecom.name.declined": "антенну",
   "banking.integration.SBBOL.name": "СББОЛ",
   "banking.integration.1CClientBankExchange.name": "1С",
   "banking.category.MAINTENANCE_APARTMENT_BUILDING.name": "Содержание и текущий ремонт общего имущества в многоквартирном доме",
