feat(condo): DOMA-5320 added ticket quality control * feat(condo): DOMA-5320 updated pages with new component * feat(condo): DOMA-5320 updated ticket filter templates * chore(condo): DOMA-5320 updated submodule * fix(condo): DOMA-5320 fixed layout * feat(condo): DOMA-5320 added field "qualityControlUpdatedBy" in Ticket * feat(condo): DOMA-5320 forbade the resident to update quality control in ticket * feat(condo): DOMA-5320 added counter for quality control comment

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -708,6 +708,10 @@
   "pages.condo.ticket.TicketChanges.deadline": "deadline",
   "pages.condo.ticket.TicketChanges.source": "ticket source",
   "pages.condo.ticket.TicketChanges.deferredUntil": "period for which the ticket is deferred",
+  "pages.condo.ticket.TicketChanges.qualityControlValue": "ticket score",
+  "pages.condo.ticket.TicketChanges.qualityControlComment": "commentary on the score",
+  "pages.condo.ticket.TicketChanges.qualityControlComment.add": "commented on his assessment",
+  "pages.condo.ticket.TicketChanges.qualityControlAdditionalOptions": "score clarification",
   "pages.condo.ticket.TicketChanges.ticketType": "ticket type",
   "pages.condo.ticket.TicketChanges.canReadByResident": "visibility of the ticket",
   "pages.condo.ticket.TicketChanges.canReadByResident.true": "displayed",
@@ -1211,6 +1215,24 @@
   "ticket.reviewComment.empty.badReview": "What exactly did not like - did not note",
   "ticket.reviewComment.empty.goodReview": "What exactly did he like - did not note",
   "ticket.reviewComment.withoutComment": "without comment",
+  "ticket.qualityControl": "Quality control",
+  "ticket.qualityControl.filter.label": "Score of the quality control service",
+  "ticket.qualityControl.bad": "Bad",
+  "ticket.qualityControl.options.lowQuality": "Low quality",
+  "ticket.qualityControl.options.slowly": "Very slowly",
+  "ticket.qualityControl.good": "Good",
+  "ticket.qualityControl.options.highQuality": "High quality",
+  "ticket.qualityControl.options.quickly": "Quickly",
+  "ticket.qualityControlComment": "Comment",
+  "ticket.modalQualityControl.edit": "Edit scoring",
+  "ticket.modalQualityControl.save": "Save",
+  "ticket.modalQualityControl.bad.title": "What was wrong?",
+  "ticket.modalQualityControl.good.title": "Share your emotions",
+  "ticket.modalQualityControl.leaveComment": "Leave a comment",
+  "ticket.modalQualityControl.comment": "Your commentary",
+  "ticket.modalQualityControl.comment.placeholder": "Comment text",
+  "ticket.modalQualityControlChange.title": "Would you like to change your scoring?",
+  "ticket.modalQualityControlChange.subtitle": "Change the scoring if the current one does not match the feedback from the resident",
   "ticket.shareTitle": "Ticket №{number} dated {date}",
   "ticket.shareDetails": "The text of the ticket: \"{details}\"",
   "ticket.shareWarningEmail": "Some employees will not receive a ticket because we do not know their email address. You can add their mail in the \"{link}\" section.\nNo mail for:\n{employees}\n",
@@ -1512,6 +1534,8 @@
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Incorrect propertyId was provided. Please check that this id related to passed organizationId",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "The end of the works cannot be earlier than the start",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Validity date is required",
+  "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Additional quality control parameters must match the specified scoring",
+  "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
   "excelExport.header.contacts.forAllTime": "Contacts for all time",
   "excelExport.header.contacts.forPeriod": "Contacts for the period",
   "excelExport.headers.payments.date": "Date",
@@ -1587,6 +1611,11 @@
   "excelExport.headers.tickets.reviewValue": "Review score",
   "excelExport.headers.tickets.reviewComment": "Review comment",
   "excelExport.headers.tickets.statusReopenedCounter": "Number of reopens",
+  "excelExport.headers.tickets.qualityControlValue": "EMPLOYEE: quality control",
+  "excelExport.headers.tickets.qualityControlComment": "Commentary on quality control",
+  "excelExport.headers.tickets.qualityControlAdditionalOptions": "Refinements for quality control score",
+  "excelExport.headers.tickets.qualityControlUpdatedAt": "Date and time of quality control",
+  "excelExport.headers.tickets.qualityControlUpdatedBy": "The employee who made the last change to the score QC",
   "excelExport.headers.ticket_report_property_status.address": "Address",
   "excelExport.headers.ticket_report_property_status.processing": "Processing",
   "excelExport.headers.ticket_report_property_status.completed": "Completed",
