--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -685,39 +685,43 @@
   "pages.condo.ticket.title.TicketNotFromResident": "Заявка не от жителя",
   "pages.condo.ticket.alert.BlockedEditing.title": "Редактирование заявки недоступно",
   "pages.condo.ticket.alert.BlockedEditing.description": "Вы не можете изменить заявку, потому что указанный адрес больше не обслуживается",
-  "pages.condo.ticket.TicketChanges.add": "добавил {field}. Стало {to}",
-  "pages.condo.ticket.TicketChanges.change": "изменил {field} на {to}. Был {from}",
-  "pages.condo.ticket.TicketChanges.boolean.change": "изменил {field}. Стала {to}",
+  "pages.condo.ticket.TicketChanges.add": "добавил {field} {to}",
+  "pages.condo.ticket.TicketChanges.change": "изменил {field} с {from} на {to}",
+  "pages.condo.ticket.TicketChanges.boolean.change": "изменил {field} на {to}",
   "pages.condo.ticket.TicketChanges.status.change": "перевел задачу из статуса {from} в статус {to}",
-  "pages.condo.ticket.TicketChanges.details.change": "изменил {field}. Было {from}, а стало {to}",
+  "pages.condo.ticket.TicketChanges.details.change": "изменил {field} с {from} на {to}",
   "pages.condo.ticket.TicketChanges.canReadByResident.change": "изменил {field}: заявка {to} в моб. приложении жителя",
-  "pages.condo.ticket.TicketChanges.remove": "удалил {field}. Было {from}",
+  "pages.condo.ticket.TicketChanges.remove": "удалил {field} {from}",
   "pages.condo.ticket.TicketChanges.clientPhone": "телефон клиента",
   "pages.condo.ticket.TicketChanges.details": "описание заявки",
   "pages.condo.ticket.TicketChanges.clientName": "имя клиента",
   "pages.condo.ticket.TicketChanges.statusDisplayName": "статус заявки",
   "pages.condo.ticket.TicketChanges.assignee": "ответственного",
-  "pages.condo.ticket.TicketChanges.assignee.add": "добавил {field}. Стал {to}",
+  "pages.condo.ticket.TicketChanges.assignee.add": "добавил {field} {to}",
   "pages.condo.ticket.TicketChanges.executor": "исполнителя",
-  "pages.condo.ticket.TicketChanges.executor.add": "добавил {field}. Стал {to}",
-  "pages.condo.ticket.TicketChanges.executor.remove": "удалил {field}. Был {from}",
-  "pages.condo.ticket.TicketChanges.reviewValue.add": "оценил заявку на {to}",
+  "pages.condo.ticket.TicketChanges.executor.add": "добавил {field} {to}",
+  "pages.condo.ticket.TicketChanges.executor.remove": "удалил {field} {from}",
+  "pages.condo.ticket.TicketChanges.reviewValue.add": "добавил оценку {to}",
   "pages.condo.ticket.TicketChanges.statusReopenedCounter.change": "вернул заявку в работу",
   "pages.condo.ticket.TicketChanges.classifier": "классификатор",
   "pages.condo.ticket.TicketChanges.address": "адрес",
   "pages.condo.ticket.TicketChanges.deadline": "срок заявки",
   "pages.condo.ticket.TicketChanges.source": "источник заявки",
   "pages.condo.ticket.TicketChanges.deferredUntil": "срок, на который откладывается заявка",
+  "pages.condo.ticket.TicketChanges.qualityControlValue": "оценку",
+  "pages.condo.ticket.TicketChanges.qualityControlComment": "комментарий к оценке",
+  "pages.condo.ticket.TicketChanges.qualityControlComment.add": "прокомментировал свою оценку: {to}",
+  "pages.condo.ticket.TicketChanges.qualityControlAdditionalOptions": "уточнение по оценке",
   "pages.condo.ticket.TicketChanges.ticketType": "тип заявки",
   "pages.condo.ticket.TicketChanges.canReadByResident": "видимость заявки",
   "pages.condo.ticket.TicketChanges.canReadByResident.true": "отображается",
   "pages.condo.ticket.TicketChanges.canReadByResident.false": "не отображается",
-  "pages.condo.ticket.TicketChanges.isPaid.true": "платной",
-  "pages.condo.ticket.TicketChanges.isPaid.false": "бесплатной",
-  "pages.condo.ticket.TicketChanges.isEmergency.true": "аварийной",
-  "pages.condo.ticket.TicketChanges.isEmergency.false": "не аварийной",
-  "pages.condo.ticket.TicketChanges.isWarranty.true": "гарантийной",
-  "pages.condo.ticket.TicketChanges.isWarranty.false": "не гарантийной",
+  "pages.condo.ticket.TicketChanges.isPaid.true": "платный",
+  "pages.condo.ticket.TicketChanges.isPaid.false": "бесплатный",
+  "pages.condo.ticket.TicketChanges.isEmergency.true": "аварийный",
+  "pages.condo.ticket.TicketChanges.isEmergency.false": "не аварийный",
+  "pages.condo.ticket.TicketChanges.isWarranty.true": "гарантийный",
+  "pages.condo.ticket.TicketChanges.isWarranty.false": "не гарантийный",
   "pages.condo.ticket.TicketChanges.notice.DeletedCreatedAt.title": "Неизвестный пользователь",
   "pages.condo.ticket.TicketChanges.notice.DeletedCreatedAt.description": "Упс, кажется пользователь, который внёс эти изменения, был удалён из системы",
   "pages.condo.ticket.TicketChanges.autoCloseTicket": "Заявка автоматически переведена в статус «{status}», так как от жителя не было обратной связи в течение 7 дней.",
@@ -1211,6 +1215,24 @@
   "ticket.reviewComment.empty.badReview": "Что именно не понравилось – не отметил",
   "ticket.reviewComment.empty.goodReview": "Что именно понравилось – не отметил",
   "ticket.reviewComment.withoutComment": "без уточнения",
+  "ticket.qualityControl": "Контроль качества",
+  "ticket.qualityControl.filter.label": "Оценка службы контроля качества",
+  "ticket.qualityControl.bad": "Плохо",
+  "ticket.qualityControl.options.lowQuality": "Сделали некачественно",
+  "ticket.qualityControl.options.slowly": "Долго делали",
+  "ticket.qualityControl.good": "Хорошо",
+  "ticket.qualityControl.options.highQuality": "Сделали на совесть",
+  "ticket.qualityControl.options.quickly": "Быстро сделали",
+  "ticket.qualityControlComment": "Комментарий",
+  "ticket.modalQualityControl.edit": "Изменить оценку",
+  "ticket.modalQualityControl.save": "Готово",
+  "ticket.modalQualityControl.bad.title": "Что было не так?",
+  "ticket.modalQualityControl.good.title": "Поделитесь эмоциями",
+  "ticket.modalQualityControl.leaveComment": "Оставить комментарий",
+  "ticket.modalQualityControl.comment": "Комментарий к оценке",
+  "ticket.modalQualityControl.comment.placeholder": "Текст комментария",
+  "ticket.modalQualityControlChange.title": "Хотите изменить оценку?",
+  "ticket.modalQualityControlChange.subtitle": "Измените оценку, если текущая не соответствует обратной связи от жителя",
   "ticket.shareTitle": "Заявка №{number} от {date}",
   "ticket.shareDetails": "Текст заявки: «{details}»",
   "ticket.shareWarningEmail": "Некоторым сотрудникам не будет отправлена заявка, так как мы не знаем их эл. почты. Вы можете добавить их почту в разделе «{link}».\nНет почты у:\n{employees}\n",
@@ -1512,6 +1534,8 @@
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Неверное значение propertyId. Данный дом не принадлежит выбранной организации",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "Окончание работ не может быть раньше начала",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Дата актуальности новости обязательна",
+  "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Дополнительные параметры контроля качества должны соответсоввать указанной оценке",
+  "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "При указании комментария или дополнительных параметров оценки нужно указать саму оценку",
   "excelExport.header.contacts.forAllTime": "Контакты за всё время",
   "excelExport.header.contacts.forPeriod": "Контакты за период",
   "excelExport.headers.payments.date": "Дата",
@@ -1587,6 +1611,11 @@
   "excelExport.headers.tickets.reviewValue": "Оценка заявки",
   "excelExport.headers.tickets.reviewComment": "Комментарий к оценке",
   "excelExport.headers.tickets.statusReopenedCounter": "Возвратов заявки",
+  "excelExport.headers.tickets.qualityControlValue": "СОТРУДНИК: контроль качества",
+  "excelExport.headers.tickets.qualityControlComment": "Комментарий к контролю качества",
+  "excelExport.headers.tickets.qualityControlAdditionalOptions": "Уточнения по оценке контроля качества",
+  "excelExport.headers.tickets.qualityControlUpdatedAt": "Дата и время контроля качества",
+  "excelExport.headers.tickets.qualityControlUpdatedBy": "Сотрудник, внесший последние изменения в оценку",
   "excelExport.headers.ticket_report_property_status.address": "Адрес",
   "excelExport.headers.ticket_report_property_status.processing": "В работе",
   "excelExport.headers.ticket_report_property_status.completed": "Выполнена",
