--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1500,6 +1500,7 @@
   "api.organization.reInviteOrganizationEmployee.ALREADY_ACCEPTED_INVITATION": "Specified employee has already accepted invitation",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Incorrect propertyId was provided. Please check that this id related to passed organizationId",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "The end of the works cannot be earlier than the start",
+  "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Validity date is required",
   "excelExport.headers.payments.date": "Date",
   "excelExport.headers.payments.account": "Account",
   "excelExport.headers.payments.address": "Address",
